contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz158216.cpp
struct iz158216_tm {
};
int iz158216_main() {
    iz158216_tm mytm;
    (void) ({
        iz158216_tm mytm2; // unresolved
        mytm2 = mytm; // unresolved
    });
    mytm ++;
    return 0;
}
